# Document  $Id$
# Summary   File changelog for the chemical-mime-data project.

2007-01-07 Daniel Leidert <daniel.leidert@wgdd.de>

	* src/chemical-mime-database.xml.in (chemical/x-cmtx)
	(chemical/x-shelx): Fixed pattern (forgot to count the newline).

2007-01-07 Daniel Leidert <daniel.leidert@wgdd.de>

	* html_docs/cmd.css: Added a border between MIME types. Increased
	space to table cell borders.

	* src/chemical-mime-database.xml.in: Added (currently unsupported)
	chemical/x-cmdf, chemical/x-cmmf and chemical/x-cmtx MIME types.
	(chemical/x-cerius): Fixed description.
	(chemical/x-shelx): Improved pattern to not conflict with
	chemical/x-cmtx.

	* xsl/cmd_website.xsl (mime-type): Added a class attribute to the
	first tr tag, to allow a border.

2007-01-07 Daniel Leidert <daniel.leidert@wgdd.de>

	* NEWS: Prepared for release 0.1.94.

	* src/chemical-mime-database.xml.in (chemical/x-cache)
	(chemical/x-cache-csf): Added an acronym/expanded-acronym combination
	for the CAChe acronym.

2007-01-06 Daniel Leidert <daniel.leidert@wgdd.de>

	* src/chemical-mime-database.xml.in: Added chemical/x-cerius and
	chemical/x-ctx initially, but didn't activate it yet.
	(chemical/x-cml): Added some magic pattern.
	(chemical/x-genbank): Added acronym/expanded-acronym combination for
	GenBank abbreviation.
	(chemical/x-gulp-input, chemical/x-gulp): Improved wording.
	(chemical/x-msi-car): Removed .cor extension for the moment. Added
	magic patter and specification resources.
	(chemical/x-msi-hessian): Added .hessianx and .xhessian extensions.
	Added magic patter and specification resources.
	(chemical/x-msi-mdf): Fixed sub-class-of. Added magic pattern and
	specification resources.
	(chemical/x-msi-msi): Added magic patter and specification resources.
	(chemical/x-vmd): Added specification resource.

2007-01-06 Daniel Leidert <daniel.leidert@wgdd.de>

	* NEWS: Prepared for release 0.1.94.

	* TODO: Updated.

2007-01-06 Daniel Leidert <daniel.leidert@wgdd.de>
